# odw-synapse-workspace

./: .gitignore  ANONYMISATION_IMPLEMENTATION_SUMMARY.md  ANONYMISATION_INTEGRATION_GUIDE.md  ANONYMISATION_RAW_TO_STD.md  PURVIEW_READINESS_CHECKLIST.md  README.md  create_complete_flattened.py  pyproject.toml
.github/: CODEOWNERS  CODEOWNERS.draft
.github/workflows/: code-validation.yaml  codeql.yml  pr-lifecycle.yaml  synapse-artifact-archiver.yaml
.venv-py312/: pyvenv.cfg
ER-diagrams/: Inspector_Specialism_erd.md  Inspector_address_erd.md  Inspector_specialism_erd.md  SAP_HR_Employee_Hierarchy.md  SAP_HR_Employee_Hierarchy_monthly.md  employee_hierarchy_erd.md  inspector_address_erd_extended.md  sap_hr_Absence_erd.md  sap_hr_Inspector_address_erd.md  sap_hr_absence_erd.md  sap_hr_inspector_address_erd_extended.md  sap_hr_leavers_erd.md  sap_hr_pbi_vw_measures_erd.md  sap_hr_protected_data_erd.md
configuration/spark-pool/: requirements-preview.txt  requirements.txt
configuration/workspace-packages/: build.gradle
data-models/: aie-document-data.md  appeal-document.md  appeal-event-estimate.md  appeal-event.md  appeal-folder.md  appeal-has.md  appeal-service-user.md  appeals_representation.md  entraid.md  legacy_folder_data.md  listed-building.md  nsip-document.md  nsip-exam-timetable.md  nsip-invoice.md  nsip-meeting.md  nsip-project-update.md  nsip-project.md  nsip-representation.md  nsip-s51-advice.md  nsip-subscription.md  pins-inspector.md  pins_lpa.md  pln_master-overview.md  ref_appeal_attribute_matrix.md  service_user.md
data-models/saphr/: SAP_HR_Employee_Hierarchy_monthly.md  SAP_HR_Employee_Hierarchy_weekly.md  employee_hierarchy_monthly.md  employee_hierarchy_weekly.md  inspector_specialism.md  sap_hr_absence.md  sap_hr_employee_hierarchy_monthly.md  sap_hr_employee_hierarchy_weekly.md  sap_hr_leavers.md  sap_hr_live_dim_inspector.md  sap_hr_live_dim_inspector_address.md  sap_hr_live_dim_inspector_weekly.md  sap_hr_pbi_vw_measures.md  sap_hr_protected_data.md
data-models/unmanaged data/: casework_local_plan_data_model.md  green_specialist_case_data_model.md
docs/: github-access-management.md  github-teams-proposal.md  github-teams-summary.md
docs/anonymisation/: INTEGRATION_TESTING_GUIDE.md  QUICKSTART.md  UNIT_TESTING_GUIDE.md  mock_policy.yaml  policy.yaml
docs/architecture/: servicebus-functionapps.md
docs/layers/: 2_standardised.md
docs/standards/: get-data-from-external-api.md
integrationRuntime/: AutoResolveIntegrationRuntime.json
linkedService/: pins-synw-odw-dev-uks-WorkspaceDefaultSqlServer.json  pins-synw-odw-dev-uks-WorkspaceDefaultStorage.json
logicapp/: logicapp-architecture.ipynb
odw/: flatten_package_into_notebook.py  flatten_package_into_notebook__output.py  flatten_package_with_anonymisation.py  test_file.py
odw/core/: exceptions.py
odw/test/: conftest.py
pipelines/: azure-pipelines-code-validation.yml  azure-pipelines-codeql.yml  azure-pipelines-pr-lifecycle.yml  azure-pipelines-synapse-artifact-archiver.yml  azure-pipelines.yaml
pipelines/jobs/: deploy-synapse.yaml  run-ado-script-tests.yaml  run-odw-package-integrationtests.yaml  run-odw-package-unittests.yaml  run-synapse-smoketests.yaml
pipelines/scripts/: archive_artifacts.py  archive_tables.py  check_notebooks_valid.py  clean_notebooks.py  copy_key_vault_secrets.py  deploy_odw_package.py  deploy_packages.py  download_live_private_endpoints.py  get_synapse_details.py  preprocess_artifacts.py  remove_unmodified_synapse_files.py  update_spark_pool_references.py
pipelines/stages/: run-odw-package-tests.yaml
pipelines/steps/: build-and-deploy-odw-package.yaml  build-and-deploy-synapse-package.yaml
scripts/: archive_notebooks_not_used_by_master_pln_and_unreferenced.py  archive_pipelines_not_used_by_master_pln_and_not_run.py  buildHierarchyOfPipelines.py  check_purview_test_env.py  ims_notebook.ipynb  listUnreferencedNotebooks.py  rename_service_bus_tables.py  test_purview_mask.py  test_purview_mask_dart_lpa.py  test_workspace_functions.py
scripts/odw-validation/: json-schema.ipynb
spike-github-entraid-sync/: .gitignore  COMPARISON.md  EXPECTED_OUTPUTS.md  QUICKSTART.md  README.md  main.tf  setup.sh  variables.tf
tests/e2e_test/: test_e2e_pln_e2e_test.py  validate_e2e_results.py
tests/integration_test/: test_integration_pln_trigger_function_app.py
tests/smoke_test/: test_smoke_azure_functions.py  test_smoke_synapse_connectivity.py
tests/unit_test/: conftest.py  test_unit_anonymisation_apply_from_purview.py  test_unit_anonymisation_engine.py  test_unit_anonymisation_purview.py  test_unit_azure_functions.py
tests/util/: conftest_util.py  constants.py  notebook_run_test_case.py  pipeline_run_test_case.py  synapse_util.py
workspace/database/: hbtLakeDB.json
workspace/dataset/: AIEFile1Raw.json  Abeyance.json  Abeyance_Mpesc.json  Address.json  Address_MPESC.json  Applicant.json  ApplicantSink.json  Authority.json  Authority_MPESC.json  AzureSqlTable3.json  AzureSqlTableMiPinsDev.json  AzureSqlTableMiPinsDev1.json  AzureSqlTable_EntraID.json  Binary1.json  Binary2.json  CASE_HISTORY_MPESC.json  CASE_MPESC.json  COSTS_MPESC.json  CSV_DATALAB.json  CaseContact_MPESC.json  Case_load.json  Cases_MPESC.json  Contact.json  ContactAddress.json  Costs.json  Dates.json  Entraid_sink.json  (+151 more)
(+1420 files in other folders)
