# This file is only for the odw package, and should not be used for anything else!

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "odw"
dynamic = [ "version" ]

[tool.poetry.dependencies]
python = "~=3.10"
pydantic = "^2.12.5"
pytest = "^8.4.1"
mock = "^5.2.0"
azure-monitor-opentelemetry = "^1.6.4"
tenacity = "^9.0.0"
pyspark = "^3.4.0"
requests = "^2.32.5"

[project.optional-dependencies]
test = [
    "delta-spark==2.4.0",
    "dotenv==0.9.9",
    "filelock==3.20.3",
    "mock==5.2.0",
    "pytest==8.4.1",
    "pytest-xdist==3.8.0"
]

[tool.poetry]
name = "odw"
version = "1.0.1"
description = "The ODW ETL Python package"
readme = "odw/readme.md"
packages = [{include = "odw"}]
exclude = [
    "odw/test"
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 150
indent-width = 4
target-version = "py310"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
