# This file is only for the odw package, and should not be used for anything else!

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "odw"
dynamic = [ "version" ]
dependencies = [
    "pydantic==2.12.5",
    "azure-monitor-opentelemetry==1.6.4",
    "tenacity==9.0.0",
    "pyspark==3.5.0",
    "requests==2.32.5",
    "ast2json==0.4"
]

[tool.poetry.dependencies]
python = "~=3.10"

[project.optional-dependencies]
test = [
    "delta-spark==3.2.0",
    "dotenv==0.9.9",
    "filelock==3.20.3",
    "mock==5.2.0",
    "pytest==9.0.3",
    "pytest-xdist==3.8.0",
    "coverage==7.13.5",
    "pytest-cov==7.0.0"
]

[tool.poetry]
name = "odw"
version = "1.0.1"
description = "The ODW ETL Python package"
readme = "odw/readme.md"
packages = [{include = "odw"}]
exclude = [
    "odw/test"
]
authors = ["odw-team"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.coverage.run]
omit = [
    "odw/core/etl/transformation/curated/appeal_attribute_matrix_curated_process.py",
    "odw/core/etl/transformation/curated/appeal_event_curated_process.py",
    "odw/core/etl/transformation/curated/appeal_folder_curation_process.py",
    "odw/core/etl/transformation/curated/appeal_has_curated_mipins_process.py",
    "odw/core/etl/transformation/curated/appeal_has_curated_process.py",
    "odw/core/etl/transformation/curated/appeal_s78_curation_process.py",
    "odw/core/etl/transformation/curated/appeal_s78_mipins_curation_process.py",
    "odw/core/etl/transformation/curated/appeal_service_user_curated_mipins_process.py",
    "odw/core/etl/transformation/curated/appeal_service_user_curated_mipins_process.py",
    "odw/core/etl/transformation/curated/appeal_service_user_curated_process.py",
    "odw/core/etl/transformation/curated/dart_api_curation_process.py",
    "odw/core/etl/transformation/curated/entraid_curation_process.py",
    "odw/core/etl/transformation/curated/entraid_mipins_curation_process.py",
    "odw/core/etl/transformation/curated/legacy_folder_data_curation_process.py",
    "odw/core/etl/transformation/harmonised/appeal_attribute_matrix_harmonisation_process.py",
    "odw/core/etl/transformation/harmonised/appeal_event_harmonisation_process.py",
    "odw/core/etl/transformation/harmonised/appeal_has_harmonisation_process.py",
    "odw/core/etl/transformation/harmonised/appeal_s78_harmonisation_process.py",
    "odw/core/etl/transformation/harmonised/listed_building_harmonisation_process.py",
    "odw/core/etl/transformation/harmonised/service_user_harmonisation_process.py",
    "odw/core/etl/transformation/standardised/appeal_attribute_matrix_standardisation_process.py",
    "odw/core/etl/transformation/standardised/appeal_has_standardisation_process.py",
    "odw/core/etl/transformation/standardised/appeal_s78_standardisation_process.py",
    "odw/core/etl/transformation/standardised/listed_building_standardisation_process.py"
]

line-length = 150
indent-width = 4
target-version = "py310"

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "purview: marks tests that require Purview API access (deselect with '-m \"not purview\"')",
]
